--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,750 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+*{
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
+  }
+  html{
+    font-size: 10px;
+    background-color: #292e4d;
+    scroll-behavior: smooth;
+
+  }
+  
+  @media (width < 1400px) {
+    html{
+      font-size: 9.5px;
+    }
+  }
+  
+  @media (width < 1300px) {
+    html{
+      font-size: 9px;
+    }
+  }
+  
+  @media (width < 1200px) {
+    html{
+      font-size: 8.5px;
+    }
+  }
+  
+  @media (width < 1100px) {
+    html{
+      font-size: 8px;
+    }
+  }
+  
+  @media (width < 1000px) {
+    html{
+      font-size: 7.5px;
+    }
+  }
+  @media (width < 900px) {
+    html{
+      font-size: 7px;
+    }
+  }
+  
+  @media (width < 800px) {
+    html{
+      font-size: 6.5px;
+    }
+  }
+  
+  @media (width < 700px) {
+    html{
+      font-size: 6px;
+    }
+  }
+  
+  @media (width < 600px) {
+    html{
+      font-size: 5.5px;
+    }
+  }
+  
+  @media (width < 500px) {
+    html{
+      font-size: 5px;
+    }
+  }
+  
+  @media (width < 400px) {
+    html{
+      font-size: 4.5px;
+      
+    }
+  }
+  
+  @media (width < 300px) {
+    html{
+      font-size: 4px;
+    }
+  }
+
+
+
+  /* ---------- MAIN ----------- */
+  
+  
+  .main{
+    font-size: 10px;
+    background-color: rgb(41, 46, 77);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 6rem 10rem;
+    padding-bottom: 10rem;
+  }
+
+
+  .leftside{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    & h5{
+        font-size: 2em;
+        color: rgb(216, 229, 243);
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    }
+  
+    & h1{
+        color: rgb(255, 242, 242);
+        font-size: 4em;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-weight: 900;
+        letter-spacing: 0.1em;
+        padding-top: 1em;
+        padding-bottom: 0.5em;
+
+        & span{
+          /* text-shadow: 3px 3px 0 black; */
+          /* text-shadow: 2px 2px 4px gray; */
+          text-shadow: 0 0 5px #050101, 0 0 10px #04205c, 0 0 20px rgb(7, 7, 7);
+
+
+
+
+
+
+
+
+
+        }
+
+
+    }
+
+    .focus-in-expand {
+      -webkit-animation: focus-in-expand 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+              animation: focus-in-expand 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    }
+
+    @-webkit-keyframes focus-in-expand {
+      0% {
+        letter-spacing: -0.5em;
+        -webkit-filter: blur(12px);
+                filter: blur(12px);
+        opacity: 0;
+      }
+      100% {
+        -webkit-filter: blur(0px);
+                filter: blur(0px);
+        opacity: 1;
+      }
+    }
+    @keyframes focus-in-expand {
+      0% {
+        letter-spacing: -0.5em;
+        -webkit-filter: blur(12px);
+                filter: blur(12px);
+        opacity: 0;
+      }
+      100% {
+        -webkit-filter: blur(0px);
+                filter: blur(0px);
+        opacity: 1;
+      }
+    }
+    
+
+    & h4{
+        font-size: 3em;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-weight: 200;
+        letter-spacing: 0.3em;
+        color:rgb(5, 35, 61);
+        /* text-shadow: 0 0 10px rgba(23, 58, 97, 0.8); */
+        text-shadow: 2px 2px 4px gray, -2px -2px 4px lightblue;
+
+
+
+    }
+
+    & p{
+        font-size: 2em;
+        font-family: 'Times New Roman', Times, serif;
+        width: 25em;
+        padding-top: 1em;
+       color: rgb(221, 223, 224);
+    }
+  }
+
+  .rightside{
+    & img{
+        width: 30em;
+        height: 40em;
+        object-fit: cover;
+        border-radius: 2em;
+        border: 0.1em solid rgb(8, 8, 8);
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    }
+  }
+
+
+  /* --------MAIN RESPONSIVE------------- */
+
+
+
+  @media (width < 1420px) {
+    body .main{
+        font-size: 10px;
+    }
+  }
+  @media (width < 1320px) {
+    body .main{
+        font-size: 9.5px;
+    }
+  }
+  @media (width < 1220px) {
+    body .main{
+        font-size: 9px;
+    }
+  }
+  @media (width < 1120px) {
+    body .main{
+        font-size: 8.5px;
+    }
+  }
+  @media (width < 1020px) {
+    body .main{
+        font-size: 8px;
+    }
+  }
+  @media (width < 920px) {
+    body .main{
+        font-size: 7.5px;
+    }
+  }
+  @media (width < 820px) {
+    body .main{
+        font-size: 7px;
+    }
+  }
+  @media (width < 720px) {
+    body .main{
+        font-size: 6.5px;
+    }
+  }
+
+  @media (width < 620px) {
+    body .main{
+      font-size: 6px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 3em;
+    }
+  }
+  @media (width < 520px) {
+    body .main{
+        font-size: 5.5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+  }
+
+
+  @media (width < 420px) {
+    body .main{
+        font-size: 5px;
+    }
+  }
+
+  @media (width < 320px) {
+    body .main{
+        font-size: 4.5px;
+        width: 100%;
+    }
+  } 
+
+
+
+
+
+  /* ----------- ABOUT--------------- */
+
+  .about{
+    font-size: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 6rem 10rem;
+    padding-bottom: 10rem;
+    background-color: rgb(33, 37, 63);
+  }
+
+  .leftside1{
+& img{
+  width: 50em;
+  height: 40em;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+ 
+ 
+}
+  }
+
+  .rightside1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    & h2{
+      font-size: 4em;
+      text-align: center;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      font-weight: 600;
+        text-shadow: 3px 3px 0 rgb(77, 102, 153); 
+
+
+    }
+
+  & ul li{
+    font-size: 2em;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #bfc0cf;
+    width: 30em;
+    padding: 0.5em;
+    text-align: center;
+
+  }  
+  }
+
+
+  /* ---------ABOUT RESPONSIVE ---------*/
+
+
+  @media (width < 1400px) {
+    body .about{
+      font-size: 9.5px;
+    }
+  }
+  
+  @media (width < 1300px) {
+    body .about{
+      font-size: 9px;
+    }
+  }
+  
+  @media (width < 1200px) {
+    body .about{
+      font-size: 8.5px;
+    }
+  }
+  
+  @media (width < 1100px) {
+    body .about{
+      font-size: 8px;
+    }
+  }
+  
+  @media (width < 1000px) {
+    body .about{
+      font-size: 7.5px;
+    }
+  }
+  @media (width < 900px) {
+    body .about{
+      font-size: 7px;
+    }
+  }
+  
+  @media (width < 800px) {
+    body .about{
+      font-size: 6.5px;
+    }
+  }
+  
+  @media (width < 700px) {
+    body .about{
+      font-size: 6px;
+      
+    }
+  }
+
+  @media (width < 670px) {
+    body .about{
+      font-size: 5.7px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      
+    }
+    .rightside1{
+      & h2{
+        padding-top: 0.5em;
+      }
+    }
+  }
+  
+  @media (width < 600px) {
+    body .about{
+      font-size: 5.5px;
+    }
+  }
+  
+  @media (width < 500px) {
+    body .about{
+      font-size: 5px;
+    }
+  }
+  
+  @media (width < 400px) {
+    body .about{
+      font-size: 4.5px;
+      
+    }
+  }
+  
+  @media (width < 300px) {
+    body .about{
+      font-size: 4px;
+    }
+  }
+
+  
+
+  /* ------- SKILLS --------- */
+  
+  .skills{
+    background-color: rgb(41, 46, 77);
+    padding: 3rem;
+    font-size: 10px;
+    margin: 4rem; 
+  }
+  
+  .skills>h2{
+    font-size: 4em;
+    font-weight: 900;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    letter-spacing: 0.3em;
+    color: rgb(1, 1, 3);
+    text-transform: uppercase;
+    padding-bottom: 0.5em;
+    text-align: center;
+    text-shadow: 3px 3px 0 rgb(53, 71, 105); 
+  }
+    
+  .skillsmain{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+
+  .skillsmain ul{
+    color: aliceblue;
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: disc;
+    width: 65em;
+    font-size: 2em;
+  }
+  
+
+  .row{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+    margin-bottom: 1em;
+  }
+  .row li h3{
+    font-size: 1.5em;
+    color: rgb(9, 7, 32);
+    font-weight: 550;
+    padding: 0.5em;
+  }
+
+
+
+/* -------- SKILLS RESPONSIVE ---------- */
+
+
+  @media (width < 1400px) {
+    body .skills{
+      font-size: 9.5px;
+    }
+  }
+  
+  @media (width < 1300px) {
+    body .skills{
+      font-size: 9px;
+    }
+  }
+  
+  @media (width < 1200px) {
+    body .skills{
+      font-size: 8.5px;
+    }
+  }
+  
+  @media (width < 1100px) {
+    body .skills{
+      font-size: 8px;
+    }
+  }
+  
+  @media (width < 1000px) {
+    body .skills{
+      font-size: 7.5px;
+    }
+  }
+  @media (width < 900px) {
+    body .skills{
+      font-size: 7px;
+    }
+  }
+  
+  @media (width < 800px) {
+    body .skills{
+      font-size: 6.5px;
+    }
+  }
+  
+  @media (width < 700px) {
+    body .skills{
+      font-size: 6px;
+    }
+  }
+
+  @media (width < 670px) {
+    body .skills{
+      font-size: 5.7px;
+
+    }
+
+
+  }
+  
+  @media (width < 600px) {
+    body .skills{
+      font-size: 5.5px;
+    }
+  }
+  
+  @media (width < 500px) {
+    body .skills{
+      font-size: 5px;
+    }
+  }
+  
+  @media (width < 400px) {
+    body .skills{
+      font-size: 4.5px;
+      & .row{
+        display: flex;
+        flex-direction: column;
+       
+       }
+      
+    }
+  }
+  
+  @media (width < 300px) {
+    body .skills{
+      font-size: 4px;
+    }
+  }
+
+
+/* -------- CONTACT --------- */
+
+
+.contact{
+  font-size: 10px;
+  background-color: rgb(33, 37, 63);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2em;
+
+  
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.contactmain{
+  & h1{
+    font-size: 4em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 900;
+    text-align: center;
+    letter-spacing: 0.2em;
+       text-shadow: 2px 2px 4px gray; 
+  }
+
+  & h2{
+    font-size: 2em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+    padding: 1em;
+    letter-spacing: 0.2em;
+    color: #e5e6eb;
+
+
+  }
+
+  & p{
+    font-size: 2em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+    padding: 1em;
+    color: #e5e6eb;
+
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.details{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin: 20px;
+  margin-top: 30px;
+
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+.logo1 img{
+  width: 50px;
+  aspect-ratio: 1;
+
+ 
+  margin-top: 10px;
+}
+
+.logo2 img{
+  width: 50px;
+  aspect-ratio: 1;
+  
+  
+  margin-top: 10px;
+}
+
+.logo3 img{
+  width: 50px;
+  aspect-ratio: 1;
+ 
+  
+  margin-top: 10px;
+}
+
+.details .logo1:hover{
+  transition: all 0.4s linear;
+  transform: scale(1.1)
+}
+
+.details .logo2:hover{
+  transition: all 0.4s linear;
+  transform: scale(1.1)
+}
+
+.details .logo3:hover{
+  transition: all 0.2s linear;
+  transform: scale(1.1)
+}
+
+
+/* ------- CONTACT RESPONSIVE ---------- */
+
+
+@media (width < 1400px) {
+  body .contact{
+    font-size: 9.5px;
+  }
+}
+
+@media (width < 1300px) {
+  body .contact{
+    font-size: 9px;
+  }
+}
+
+@media (width < 1200px) {
+  body .contact{
+    font-size: 8.5px;
+  }
+}
+
+@media (width < 1100px) {
+  body .contact{
+    font-size: 8px;
+  }
+}
+
+@media (width < 1000px) {
+  body .contact{
+    font-size: 7.5px;
+  }
+}
+@media (width < 900px) {
+  body .contact{
+    font-size: 7px;
+  }
+}
+
+@media (width < 800px) {
+  body .contact{
+    font-size: 6.5px;
+  }
+}
+
+@media (width < 700px) {
+  body .contact{
+    font-size: 6px;
+  }
+}
+
+@media (width < 600px) {
+  body .contact{
+    font-size: 5.5px;
+  }
+}
+
+@media (width < 500px) {
+  body .contact{
+    font-size: 5px;
+  }
+}
+
+@media (width < 400px) {
+  body .contact{
+    font-size: 4.5px;
+    
+  }
+}
+
+@media (width < 300px) {
+  body .contact{
+    font-size: 4px;
   }
 }
