--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,7 +127,7 @@
         & span{
           /* text-shadow: 3px 3px 0 black; */
           /* text-shadow: 2px 2px 4px gray; */
-          text-shadow: 0 0 5px #050101, 0 0 10px #04205c, 0 0 20px rgb(7, 7, 7);
+          text-shadow: 0 0 0.5em #050101, 0 0 1em #04205c, 0 0 2em rgb(7, 7, 7);
 
 
 
@@ -182,7 +182,7 @@
         letter-spacing: 0.3em;
         color:rgb(5, 35, 61);
         /* text-shadow: 0 0 10px rgba(23, 58, 97, 0.8); */
-        text-shadow: 2px 2px 4px gray, -2px -2px 4px lightblue;
+        text-shadow: 0.2em 0.2em 0.4em gray, -0. 2em -0. 2em 0.4em lightblue;
 
 
 
@@ -324,7 +324,7 @@
       text-align: center;
       font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       font-weight: 600;
-        text-shadow: 3px 3px 0 rgb(77, 102, 153); 
+        text-shadow: 0.3em 0 rgb(77, 102, 153); 
 
 
     }
@@ -453,7 +453,7 @@
     text-transform: uppercase;
     padding-bottom: 0.5em;
     text-align: center;
-    text-shadow: 3px 3px 0 rgb(53, 71, 105); 
+    text-shadow: 0.3em 0.3em 0 rgb(53, 71, 105); 
   }
     
   .skillsmain{
@@ -601,7 +601,7 @@
     font-weight: 900;
     text-align: center;
     letter-spacing: 0.2em;
-       text-shadow: 2px 2px 4px gray; 
+       text-shadow: 0.2em 0.2em 0.4em gray; 
   }
 
   & h2{
