--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,8 +125,8 @@
         padding-bottom: 0.5em;
 
         & span{
-          /* text-shadow: 3px 3px 0 black; */
-          /* text-shadow: 2px 2px 4px gray; */
+         
+          
           text-shadow: 0 0 0.5em #050101, 0 0 1em #04205c, 0 0 2em rgb(7, 7, 7);
 
 
@@ -181,8 +181,9 @@
         font-weight: 200;
         letter-spacing: 0.3em;
         color:rgb(5, 35, 61);
-        /* text-shadow: 0 0 10px rgba(23, 58, 97, 0.8); */
-        text-shadow: 0.2em 0.2em 0.4em gray, -0. 2em -0. 2em 0.4em lightblue;
+        text-shadow: 0 0 0.5em #f5f2f2, 0 0 1em #04205c, 0 0 2em rgb(7, 7, 7);
+
+       
 
 
 
@@ -324,7 +325,7 @@
       text-align: center;
       font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       font-weight: 600;
-        text-shadow: 0.3em 0 rgb(77, 102, 153); 
+      text-shadow: 0 0 0.5em #7a7979, 0 0 1em #04205c, 0 0 2em rgb(7, 7, 7);
 
 
     }
@@ -453,7 +454,7 @@
     text-transform: uppercase;
     padding-bottom: 0.5em;
     text-align: center;
-    text-shadow: 0.3em 0.3em 0 rgb(53, 71, 105); 
+    text-shadow: 0 0 0.5em #9c9999, 0 0 1em #04205c, 0 0 2em rgb(7, 7, 7);
   }
     
   .skillsmain{
