--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -180,8 +180,8 @@
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-weight: 200;
         letter-spacing: 0.3em;
-        color:rgb(5, 35, 61);
-        text-shadow: 0 0 0.5em #f5f2f2, 0 0 1em #04205c, 0 0 2em rgb(7, 7, 7);
+        color:rgb(2, 22, 39);
+        text-shadow: 0 0 0.5em #8b8b8b, 0 0 1em #04205c, 0 0 2em rgb(7, 7, 7);
 
        
 
