--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -181,8 +181,8 @@
         font-weight: 200;
         letter-spacing: 0.3em;
         color:rgb(2, 22, 39);
-        text-shadow: 0 0 0.5em #8b8b8b, 0 0 1em #04205c, 0 0 2em rgb(7, 7, 7);
-
+/*         text-shadow: 0 0 0.5em #8b8b8b, 0 0 1em #04205c, 0 0 2em rgb(7, 7, 7); */
+         text-shadow: 0.2em 0.1em 0.3em gray;
        
 
 
